@@ -16,8 +16,8 @@
 	<description>Oppretter tilsagnsbrev</description>
 
 	<properties>
-		<java.version>17</java.version>
-		<cxf.version>3.3.2</cxf.version>
+		<java.version>21</java.version>
+		<cxf.version>3.5.9</cxf.version>
 	</properties>
 
 	<dependencies>
@@ -70,6 +70,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
             <optional>true</optional>
         </dependency>
 
@@ -132,7 +133,7 @@
 		<dependency>
 			<groupId>com.sun.xml.ws</groupId>
 			<artifactId>jaxws-ri</artifactId>
-			<version>2.3.2</version>
+			<version>2.3.7</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
@@ -181,6 +182,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.34</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
 				<executions>
 					<execution>
 						<id>compile</id>
@@ -201,9 +211,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M1</version>
+				<version>3.2.5</version>
 				<configuration>
-					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<argLine>-Dfile.encoding=UTF-8
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
